2004-03-31  lav

	* chset.cc, kern.cc: include wctype.h
	* getstr.cc: remove extra ;
	* screen.cc: allocate enough space for chr; clear line before filling
          (this fixes wrong display for combining accents).
	* getstr.cc: use mbtowc consistently to reset internal shift state.
	* mb.cc: use mbtowc+wcwidth to reduce number of wc calls; handle
	  wcwidth errors.
	* textpoin.cc: workaround negative column (due to buggy libc).

2004-03-30  lav

	* chset.cc, chset.h: (visualize_wchar) new function.
	* getstr.cc: support mb_mode.
	* screen.cc: support mb chars in file name.
	* window.cc: support mb chars in PutStr.

2004-03-29  lav

	* chset.cc, chset.h: (chset_isprint) new function.
	* edit.h: don't redefine _XOPEN_SOURCE_EXTENDED.
	* mb.cc: make mb_ptr const.
	* screen.cc: use chset_isprint; fix highlight in mb_mode;
	  display wchar code.
	* mb.h: add missing macros.

2004-03-23  lav

	* edit.h: define _XOPEN_SOURCE_EXTENDED; prototype for IsAlNumAt.
	* inline.h: don't use register; (IsAlNumRel, IsAlNumLeft) new functions.
	* kern.cc: implement IsAlNumAt; use it in GetWord; mark CurrentPos
	  COLUNDEFINED if inserted something at the left.
	* mb.cc, mb.h: protect from including multiple times; define mb_mode
	  to false if not USE_MULTIBYTE_CHARS.
	* screen.cc: display control chars properly in mb_mode.
	* textpoin.cc: fix endless loop; make \t priority over mb chars.
	* user.cc: fix word ops in mb_mode.
	* edit.cc: --multibyte, --no-multibyte options.

2004-03-22  lav

	* mb.cc, mb.h: new files.
	* Makefile.am: (mb.cc, mb.h) new files.
	* about.cc: update copyright.
	* kern.cc, textpoin.cc, screen.cc, window.cc, window.h: support wide chars.
	* keymapdf.cc: support newer xterm keys.

2003-10-21  lav

	* user.cc: (UserLineEnd) position on previous line indent if in text
	  mode and the line is empty; (UserCommentLine) add default case,
	  uncomment // in c files.
	* loadsave.cc: (GetDevSize) use BLKGETSIZE if available; fix