@@ -26,67 +26,7 @@
 #include "edit.h"
 #include "keymap.h"
 #include "getch.h"
-#include <wchar.h>
-
-void mb_get_col(const char *buf,int pos,int *col,int len)
-{
-#if USE_MULTIBYTE_CHARS
-   *col=0;
-   for(int i=0; i<pos; )
-   {
-      mbtowc(0,0,0);
-      wchar_t wc;
-      int ch_len=mbtowc(&wc,buf+i,len-i);
-      if(ch_len<1)
-	 ch_len=1;
-      wc=visualize_wchar(wc);
-      *col+=wcwidth(wc);
-      i+=ch_len;
-   }
-#else
-   *col=pos;
-#endif
-}
-void mb_char_left(const char *buf,int *pos,int *col,int len)
-{
-#if USE_MULTIBYTE_CHARS
-   *col=0;
-   for(int i=0; i<*pos; )
-   {
-      mbtowc(0,0,0);
-      wchar_t wc;
-      int ch_len=mbtowc(&wc,buf+i,len-i);
-      if(ch_len<1)
-	 ch_len=1;
-      if(i+ch_len>=*pos)
-      {
-	 *pos=i;
-	 return;
-      }
-      wc=visualize_wchar(wc);
-      *col+=wcwidth(wc);
-      i+=ch_len;
-   }
-#else
-   *col=--*pos;
-#endif
-}
-void mb_char_right(const char *buf,int *pos,int *col,int len)
-{
-#if USE_MULTIBYTE_CHARS
-   wchar_t wc;
-   mbtowc(0,0,0);
-   int ch_len=mbtowc(&wc,buf+*pos,len-*pos);
-   if(ch_len<1)
-      ch_len=1;
-   wc=visualize_wchar(wc);
-   int ch_width=wcwidth(wc);
-   *pos+=ch_len;
-   *col+=ch_width;
-#else
-   *col=++*pos;
-#endif
-}
+#include "mb.h"
 
 int   getstring(const char *pr,char *buf,int maxlen,History* history,int *len,
                 const char *help,const char *title)
